--- a/HistorialBalance.html
+++ b/HistorialBalance.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flatpickr.min.css">
     <link rel="stylesheet" href="css/movimientos.css">
+    <link rel="stylesheet" href="css/textos.css">
 </head>
 
 <body>
@@ -76,7 +77,8 @@
 
     <div class="hero overlay text-white">
         <h1 class="heading text-white mb-3" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Accede al historial de balance:</h1>
-        <hr>
+        <p data-aos="fade-up">Mira como cambio tu balance al pasar del tiempo! </p>
+        
         <!-- Agrega un contenedor con scroll -->
         <div class="scroll-container">
             <table class="data-table text-black">
