--- a/MetasMostrar.html
+++ b/MetasMostrar.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/glightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flatpickr.min.css">
+    <link rel="stylesheet" href="css/textos.css">
+    <link rel="stylesheet" href="css/movimientos.css">
 </head>
 
 <body>
@@ -75,6 +77,7 @@
 
     <div class="hero overlay text-white">
         <h1 class="heading text-white mb-3" data-aos="fade-up" style="margin-top: 100px; margin-left: 100px;">Registro de metas:</h1>
+        <p data-aos="fade-up">Aqui podrás ver todas tus metas creadas! </p>
         <hr>
     
         <div class="button-container">
@@ -82,7 +85,12 @@
             <a href="MetasModif.html"  class="action-button">Modificar</a>
             <a href="MetasMostrar.html"  class="action-button">Mostrar</a>
         </div>
+
+        <div class="button-container">
+
+        </div>
     
+        <div class="scroll-container">
         <table class="data-table text-black">
             <thead>
                 <tr>
@@ -97,6 +105,7 @@
 
             </tbody>
         </table>
+        </div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
